Added security issue while uploading download excel file for products

--- a/app/views/productinfos/index.html.erb
+++ b/app/views/productinfos/index.html.erb
@@ -2,7 +2,7 @@
 
 <%=
   link_to 'Download as Excel',
-          productinfos_path(format: :xlsx, :branchinfo_id => @branchinfo.id)
+          productinfos_path(format: :xlsx, :branchinfo_id => @branchinfo.id, :user_id => current_user.id)
 %>
 <%=
   link_to 'Upload from Excel',
